@@ -29,6 +29,7 @@ Version 1.9.0-svn:
    * Fixed bug #15768: Avoid parts of the previous game show in the lobby
    * Fixed bug #15727: Allow wml message titles to wrap
      screen
+   * Added the total number of villages to the status table lists
  * WML Engine:
    * Deprecated [set_variable]'s random key, use rand instead
    * Renamed [unit][status] healable to unhealable so it can default to 'no'
